--- a/AngularDashboard/src/app/login/login.component.html
+++ b/AngularDashboard/src/app/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <div class="fadeIn first">
+            <label>LogIn</label>
+        </div>
+        <form>
+            <input type="text" id="login" class="fadeIn second" name="login" placeholder="User Name">
+            <input type="text" id="password" class="fadeIn third" name="login" placeholder="Password">
+            <input type="submit" class="fadeIn fourth" value="Log In">
+        </form>
+
+    </div>
+</div>
