--- a/AngularDashboard/src/app/login/login.component.css
+++ b/AngularDashboard/src/app/login/login.component.css
@@ -26,7 +26,7 @@
     align-items: center;
     flex-direction: column; 
     justify-content: center;
-    margin-top: 20%;
+    margin-top: 130px;
     width: 100%;
     min-height: 100%;
     padding: 20px;
@@ -136,8 +136,39 @@
     color: #cccccc;
   }
   
+  button.btn.btn-primary{
+    background-color: #56baed;
+    border: none;
+    color: white;
+    padding: 15px 80px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 13px;
+    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    border-radius: 5px 5px 5px 5px;
+    margin: 5px 20px 20px 20px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
   
-  
+  input#password {
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    border-radius: 5px 5px 5px 5px;
+}
   /* ANIMATIONS */
   
   /* Simple CSS3 Fade-in-down Animation */
