--- a/AngularDashboard/src/app/dashboard/dashboard.component.html
+++ b/AngularDashboard/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,20 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <h3>Angular Web Template</h3>
+        <div class="col text-right">
+            <button class="btn btn-outline-primary" id="dropdownBasic2" (click)="onLogout()"
+                ngbDropdownToggle>Logout</button>
+        </div>
+    </nav>
+
+    <div class="sidebar">
+        <a class="active" href="">Home</a>
+        <a href="">News</a>
+        <a href="">Contact</a>
+        <a href="">About</a>
+    </div>
+
+    <div class="content">
+        <h2 class="dashbaordTitle">Dashboard</h2>
+    </div>
+</div>
